# sudoku-rs

./: Cargo.toml  README.md  generated-exampels.json  readable-generated-example.txt  readable-solution-example.txt  solution-examples.json
src/: main.rs
