[package]
name = "sudoku-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
structopt = { version = "0.3", default-features = false }
progress-bar-rs = { git = "https://github.com/Blinningjr/progress-bar-rs.git"}
